--- a/src/main/res/layout/aqi.xml
+++ b/src/main/res/layout/aqi.xml
@@ -18,7 +18,7 @@
         android:textSize="20sp"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="match_parent" android:baselineAligned="false" 
         android:layout_height="wrap_content"
         android:layout_margin="15dp">
         <RelativeLayout
